--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zoao-tech",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -9,12 +9,13 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@theguild/remark-mermaid": "^0.2.0",
+    "fumadocs-core": "15.0.10",
+    "fumadocs-mdx": "11.5.6",
+    "fumadocs-ui": "15.0.10",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "fumadocs-ui": "15.0.10",
-    "fumadocs-core": "15.0.10",
-    "fumadocs-mdx": "11.5.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "22.13.4",
