--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@theguild/remark-mermaid": "^0.2.0",
+    "@vercel/analytics": "^1.5.0",
     "fumadocs-core": "15.0.10",
     "fumadocs-mdx": "11.5.6",
     "fumadocs-ui": "15.0.10",
